Compliant with Java 8 now